--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ html, body {
 }
 
 body {
-  background: url(/img/page_bg_bottom.jpg) no-repeat center 100%;
+  background: url(../img/page_bg_bottom.jpg) no-repeat center 100%;
   background-size: cover;
   background-attachment: fixed;
 }
