--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ table.noborder th {
   font-weight: bold;
 }
 .block-contact a {
+  color: #000;
   -ms-word-break: break-all;
   word-break: break-all;
   word-break: break-word;
