--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,9 @@
-html, body {
-  width: 100%; height: 100%;
+html {
+  font-family: "Merriweather", "Times New Roman", serif; 
 }
 
+
 body {
-  background: url(../img/page_bg_bottom.jpg) no-repeat center 100%;
-  background-size: cover;
-  background-attachment: fixed;
 }
 
 .container {
@@ -23,7 +21,9 @@ table.noborder th {
   background: #fff;
 }
 */
-#page {
+
+
+#header {
   background-image:
     linear-gradient(
       to bottom, 
@@ -31,6 +31,18 @@ table.noborder th {
       rgba(255,255,255,0.45) 95%,
       rgba(255,255,255,0) 100%
   );
+}
+
+#main {
+  padding-top: 6.0rem;
+  font-size: 1.6rem;
+}
+
+#footer {
+  width: 100vw;
+  height: 30vw;
+  background: url(../img/page_bg_bottom.jpg) no-repeat center 100%;
+  background-size: cover;
 }
 
 .block-header h1 {
