--- a/css/base.css
+++ b/css/base.css
@@ -588,9 +588,27 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB; }
+  color: #999900; }
+  
+  a:link {
+    text-decoration: none;
+	color:#999900;
+}
+
+a:visited {
+    text-decoration: none;
+	color:#999900;
+}
+
 a:hover {
-  color: #0FA0CE; }
+    text-decoration: underline;
+	color:#006600;
+}
+
+a:active {
+    text-decoration: underline;
+	color:#006600;
+}
 
 
 /* Buttons
