--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,12 @@ table.noborder td,
 table.noborder th {
   border: none;
 } 
+
+/* */
+img {
+  max-width: 100%;
+}
+
 /*
 #page {
   background: #fff;
