--- a/css/gallery.css
+++ b/css/gallery.css
@@ -44,6 +44,31 @@ div.desc {
     }
 }
 
+
+.responsive2 {
+    padding: 0 6px;
+    float: left;
+    width: 33.33333%;
+/*	width: 24.99999%; */
+}
+
+
+@media only screen and (max-width: 700px){
+    .responsive2 {
+        width: 49.99999%;
+        margin: 6px 0;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .responsive2 {
+        display: none;
+    }
+}
+
+
+
+
 .clearfix:after {
     content: "";
     display: table;
