--- a/css/gallery.css
+++ b/css/gallery.css
@@ -75,8 +75,8 @@ div.desc {
     clear: both;
 }
 
-.top_gallery {
-   margin-bottom:10;
+div.top_gallery {
+   margin-bottom:20;
 }
 
 /* zoom efekt */
