--- a/css/gallery.css
+++ b/css/gallery.css
@@ -66,7 +66,25 @@ div.desc {
     }
 }
 
+.responsive3 {
+    padding: 0 6px;
+    float: left;
+    width: 33.33333%;
+/*	width: 24.99999%; */
+}
 
+
+@media only screen and (max-width: 700px){
+    .responsive3 {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .responsive3 {
+        display: none;
+    }
+}
 
 
 .clearfix:after {
