--- a/css/gallery.css
+++ b/css/gallery.css
@@ -47,7 +47,7 @@ div.desc {
 
 .responsive2 {
     padding: 0 6px;
-    float: left;
+    float: right;
     width: 33.33333%;
 /*	width: 24.99999%; */
 }
