--- a/css/gallery.css
+++ b/css/gallery.css
@@ -46,8 +46,8 @@ div.desc {
 
 
 .responsive2 {
-    padding: 0 6px;
-    float: right;
+    padding: 0 70px;
+    float: left;
     width: 33.33333%;
 /*	width: 24.99999%; */
 }
