--- a/css/gallery.css
+++ b/css/gallery.css
@@ -87,6 +87,28 @@ div.desc {
     }
 }
 
+.responsive4 {
+    padding: 0 6px;
+    float: left;
+    width: 33.33333%;
+    
+/*	width: 24.99999%; */
+}
+
+
+@media only screen and (max-width: 700px){
+    .responsive4 {
+        width: 49.99999%;
+        margin: 6px 0;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .responsive4 {
+        width: 49.99999%;
+        margin: 6px 0;
+    }
+}
 
 .clearfix:after {
     content: "";
