--- a/css/gallery.css
+++ b/css/gallery.css
@@ -110,6 +110,29 @@ div.desc {
     }
 }
 
+.responsive5 {
+    padding: 0 6px;
+   /* float: left;*/
+    width: 49.99999%;
+    
+/*	width: 24.99999%; */
+}
+
+
+@media only screen and (max-width: 700px){
+    .responsive5 {
+        width: 49.99999%;
+        margin: 6px 0;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .responsive6 {
+        width: 100%;
+    }
+}
+
+
 .clearfix:after {
     content: "";
     display: table;
